--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mx-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link text-light" href="#">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="#about">A propos de nous</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="#competence">Nos compétences</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="#realisation">Nos réalisations</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="#contact">Contact</a></li>
+                    <li class="nav-item px-3"><a class="nav-link text-light" href="#">Accueil</a></li>
+                    <li class="nav-item px-3"><a class="nav-link text-light" href="#about">A propos de nous</a></li>
+                    <li class="nav-item px-3"><a class="nav-link text-light" href="#competence">Nos compétences</a></li>
+                    <li class="nav-item px-3"><a class="nav-link text-light" href="#realisation">Nos réalisations</a></li>
+                    <li class="nav-item px-3"><a class="nav-link text-light" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -110,7 +110,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
         <a class="mt-4 col-3 mx-auto btn btn-light btn-xl" href="#contact"> Obtenez votre devis rapidement !</a>
     </div>
     <!-- About -->
-    <div id="about" class="">
+    <div id="about" class="text-white">
         <div class="d-flex justify-content-center mx-auto">
             <div class="vr"></div>
           </div>
