--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand mx-auto text-light" href="#page-top">LOUCORP</a>
-            <!-- <img src="assets/img/" alt="logo de l'entreprise" style="height: 60px;"> -->
+            <!-- <a class="navbar-brand mx-auto text-light" href="#page-top">LOUCORP</a> -->
+            <img src="assets/img/logo-.png" alt="logo de l'entreprise" style="height: 60px;">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -88,29 +88,29 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mx-auto my-2 my-lg-0 text-center">
                     <li class="nav-item px-3">
-                        <a class="nav-link text-light" href="#">Accueil</a>
+                        <a class="nav-link text-light text-uppercase" href="#">Accueil</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link text-light" href="#about">A propos de nous</a>
+                        <a class="nav-link text-light text-uppercase" href="#about">A propos de nous</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link text-light" href="#competence">Nos compétences</a>
+                        <a class="nav-link text-light text-uppercase" href="#competence">Nos compétences</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link text-light" href="#realisation">Nos réalisations</a>
+                        <a class="nav-link text-light text-uppercase" href="#realisation">Nos réalisations</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link text-light" href="#contact">Contact</a>
+                        <a class="nav-link text-light text-uppercase" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- Home -->
-    <div id="home" class="d-flex flex-column  mx-auto justify-content-center">
-        <h1 class="text-center mb-0 font-monospace fade-in" style="font-size: 100px">LOUCORP</h1>
-        <h3 class="text-center mb-4 font-monospace"> INNOVATION BATIMENT </h3>
-        <h5 class="text-center mt-2 mb-4 fst-italic font-monospace"> Innovons ensemble !</h5>
+    <div id="home" class="d-flex flex-column mb-4 mx-auto justify-content-center">
+        <h1 class="text-center mb-0  fade-in" style="font-size: 100px">LOUCORP</h1>
+        <h3 class="text-center mb-4 "> INNOVATION BATIMENT </h3>
+        <h5 class="text-center mt-2 mb-4 fst-italic "> Innovons ensemble !</h5>
         <div class="container mb-4">
             <div class="row justify-content-center">
                 <div class="text-center">
@@ -126,7 +126,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
                 </div>
             </div>
         </div>
-        <a class="mt-4 mx-auto bordeau btn btn-xl text-white shadow-xl" href="#contact">Obtenez votre devis rapidement
+        <a class="mt-4 mx-auto btn btn-bordeau text-white shadow-xl" href="#contact">Obtenez votre devis rapidement
             !</a>
     </div>
     <!-- About -->
@@ -134,13 +134,14 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
         <div class="d-flex justify-content-center mx-auto">
             <div class="vr"></div>
         </div>
-        <div class="col-8 mx-auto mt-4 mb-4 lh-lg">
+        <div class="col-xl-8 text-center my-4 mx-3 lh-lg">
             <p class="fs-4">
-                Découvrez LOUCORP, votre partenaire de confiance pour des travaux de
+                Découvrez LOUCORP,<br>
+                votre partenaire de confiance pour des travaux de
                 plaquisterie, plâtrerie et stafferie à Nice et les Alpes-Maritimes.
             </p>
             <br />
-            <p class="">
+            <p class="fs-5">
                 Nous garantissons un travail de qualité, des devis rapides et une
                 mobilité sur l'ensemble du département. Faites confiance à notre
                 équipe expérimentée pour concrétiser vos projets de rénovation et
@@ -150,10 +151,23 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
         <div class="d-flex justify-content-center mx-auto">
             <div class="vr"></div>
         </div>
+        <div class="d-flex flex-wrap mx-auto justify-content-center align-items-center">
+            <div class="col-xl-6 mx-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ad perferendis beatae vero. Magnam expedita deserunt nobis adipisci aliquam dolorem possimus illo nam consequatur tenetur aut iste animi, ex tempora.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum voluptate sint quo earum vitae dolores totam vero temporibus enim fuga assumenda, architecto officiis aperiam ratione. Ducimus praesentium modi voluptatibus nemo?
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus odit, qui nam voluptatum recusandae explicabo, at voluptatibus quos quasi harum dicta! Esse asperiores laboriosam dolor nesciunt provident vel quaerat delectus!
+            </div>
+            <div class="mx-4 p-4">
+                <img src="assets/img/profil.jpg" alt="photo de profil" style="width: 350px;">
+            </div>
+        </div>
+        <div class="d-flex justify-content-center mx-auto">
+            <div class="vr"></div>
+        </div>
     </div>
     <!-- Competences -->
-    <div id="competence" class="d-flex flex-wrap mx-auto text-center lh-lg">
-        <div class="mx-5">
+    <div id="competence" class="d-flex flex-wrap col-xl-8 col-md-8 mx-auto text-center lh-lg">
+        <div class="mx-4 mb-5">
             <i class="bi bi-layers fs-1"></i>
             <p class="fs-5 mt-2 mb-4">PLAQUISTE</p>
             <p>
@@ -166,7 +180,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
                 supérieure.
             </p>
         </div>
-        <div class="mx-5">
+        <div class="mx-4 mb-5">
             <i class="bi bi-pentagon fs-1"></i>
             <p class="fs-5 mt-2 mb-4">STAFFEUR</p>
             <p>
@@ -179,7 +193,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
                 chaque projet.
             </p>
         </div>
-        <div class="mx-5">
+        <div class="mx-4 mb-5">
             <i class="bi bi-bricks fs-1"></i>
             <p class="fs-5 mt-2 mb-4">PLATRIER</p>
             <p>
@@ -193,9 +207,9 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
             </p>
         </div>
     </div>
-    <div class="col-6 mx-auto mt-4 border-top border-dark"></div>
+    <hr class="separator col-8 mx-auto" style="height:4px;background:#7f0000;">
     <!-- Réalisations -->
-    <div id="realisation" class="">
+    <div id="realisation" class="mb-5">
         <h1 class="text-center mb-5">Nos réalisations</h1>
         <div class="col-10 mx-auto d-flex flex-wrap text-center">
             <img class="img-size p-1 slide-in" src="assets/img/placo1.jpeg" alt="photo de realisation">
@@ -206,42 +220,42 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
             <img class="img-size p-1 slide-in" src="assets/img/placo6.jpeg" alt="photo de realisation">
         </div>
     </div>
-
+    <hr class="separator col-8 mx-auto" style="height:4px;background:#7f0000;">
+    <!-- Contact -->
     <div id="contact" class="my-auto">
+        <h1 class="text-center mb-5">Nous contacter</h1>
         <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
             <div class="col-lg-6">
                 <div class="container mt-2">
-
                 <!-- <?php
                     $confirmationClass
                 ?> -->
-
                     <form method="POST" action="">
                         <div class="d-flex mb-3">
                             <div class="form-group col-md-6 pe-1">
                                 <label for="prenom">Prénom :</label>
-                                <input type="text" placeholder="" class="form-control" id="prenom" name="prenom"
+                                <input type="text" placeholder="Lou" class="form-control" id="prenom" name="prenom"
                                     required />
                             </div>
                             <div class="form-group col-md-6 ps-1">
-                                <label for="nom">Nom :</label>
-                                <input type="text" placeholder="" class="form-control" id="nom" name="nom" required />
+                                <label for="nom">NOM :</label>
+                                <input type="text" placeholder="CORP" class="form-control" id="nom" name="nom" required />
                             </div>
                         </div>
                         <div class="form-group mb-4">
                             <label for="email">Email :</label>
-                            <input type="email" placeholder="" class="form-control" id="email" name="email" required />
+                            <input type="email" placeholder="lou@corp.fr" class="form-control" id="email" name="email" required />
                         </div>
                         <div class="form-group mb-4">
                             <label for="phone">Téléphone :</label>
-                            <input type="tel" placeholder="" class="form-control" id="phone" name="phone" />
+                            <input type="tel" placeholder="06 12 34 56 78" class="form-control" id="phone" name="phone" />
                         </div>
-                        <div class="d-flex mx-auto form-group mb-4">
-                            <div style="width: 50%;">
+                        <div class="d-flex mb-3">
+                            <div class="form-group col-md-6 pe-1">
                                 <label for="etage">Etage :</label>
-                                <input type="number" placeholder="" class="form-control" id="etage" name="etage" />
+                                <input type="number" placeholder="ex: 1" class="form-control" id="etage" name="etage" />
                             </div>
-                            <div style="width: 50%;">
+                            <div class="form-group col-md-6 ps-1">
                                 <label for="etage">Superficie :</label>
                                 <input type="number" placeholder="en m²" class="form-control" id="superficie"
                                     name="superficie" />
@@ -255,7 +269,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
                         <div class="text-center">
                             <!-- <div class="g-recaptcha mb-2 d-flex justify-content-center" data-sitekey="6LeGuSopAAAAAN-ZJpFBKomc67kXpuUU27vKugwE"></div>
                             <input type="hidden" name="g-recaptcha-response" id="g-recaptcha-response"> -->
-                            <button type="submit" class="btn btn-primary" name="submit" id="submit-btn">
+                            <button type="submit" class="btn btn-bordeau text-white" name="submit" id="submit-btn">
                                 Envoyer
                             </button>
                         </div>
@@ -267,12 +281,12 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
             <div class="col-lg-4 text-center mb-5 mb-lg-0">
                 <i class="bi-phone fs-2 mb-3 text-muted"></i>
                 <br />
-                <a href="tel:+33612248452" class="text-decoration-none">+33 6 12 24 84 52</a>
+                <a href="tel:+33612248452" class="text-decoration-none" style="color: #640000">+33 6 12 24 84 52</a>
             </div>
         </div>
     </div>
     <!-- Footer-->
-    <footer class="bg-light py-4">
+    <footer class="bg-light mt-2">
         <div class="container px-4 px-lg-5">
             <div class="text-center text-muted">
                 Copyright &copy; 2022 - S.A.R.L LOUCORP
