--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 
 $confirmationClass = "";
 
@@ -64,7 +64,7 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
     }
 }
 ?>
-
+ -->
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -137,11 +137,10 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
                 </div>
             </div>
         </div>
-        <a class="mt-4 mx-auto btn btn-bordeau text-white shadow-xl" href="#contact">Obtenez votre devis rapidement
-            !</a>
+        <a class="mt-4 mx-auto btn btn-bordeau text-white shadow-xl" href="#contact">Obtenez votre devis rapidement !</a>
     </div>
     <!-- About -->
-    <div id="about" class="text-white text-center">
+    <div id="about" class="text-light-emphasis text-center">
         <div class="d-flex justify-content-center mx-auto">
             <div class="vr"></div>
         </div>
@@ -163,13 +162,20 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
             <div class="vr"></div>
         </div>
         <div class="d-flex flex-wrap mx-auto justify-content-center align-items-center">
-            <div class="col-xl-6 mx-4">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ad perferendis beatae vero. Magnam expedita deserunt nobis adipisci aliquam dolorem possimus illo nam consequatur tenetur aut iste animi, ex tempora.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum voluptate sint quo earum vitae dolores totam vero temporibus enim fuga assumenda, architecto officiis aperiam ratione. Ducimus praesentium modi voluptatibus nemo?
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus odit, qui nam voluptatum recusandae explicabo, at voluptatibus quos quasi harum dicta! Esse asperiores laboriosam dolor nesciunt provident vel quaerat delectus!
+            
+            <div class="col-xl-6 mx-4 lh-lg fw-semibold fs-5">
+                <i class="bi bi-quote fs-1"></i>
+                Expert plaquiste avec 20 ans d'expérience dans le domaine, ma passion pour mon métier se reflète dans chaque projet que je réalise où je m'efforce de créer des espaces intérieurs à la fois fonctionnels et esthétiques. Spécialisé dans l'installation de cloisons, de faux plafonds et d'autres éléments en plaque de plâtre, je suis compétent dans la lecture des plans, la prise de mesures précises et la réalisation de découpes complexes pour garantir un résultat impeccable.
+                <br>
+                <br>
+                Je suis reconnu pour mon attention aux détails et mon souci de la finition, ce qui me permet de livrer des travaux de haute qualité à chaque fois. En tant que professionnel fiable et ponctuel, je suis également capable de travailler efficacement en équipe pour répondre aux besoins de mes clients.
+                <br>
+                <br>
+                Je reste constamment à l'affût des nouvelles tendances et des innovations dans le domaine de la plaquisterie afin de proposer des solutions modernes et de haute qualité à mes clients. Je suis impatient de mettre mes compétences au service de votre projet et de contribuer à la création d'un espace exceptionnel qui répondra à vos besoins et dépassera vos attentes.
+                <i class="bi bi-quote fs-1"></i>
             </div>
             <div class="mx-4 p-4">
-                <img src="assets/img/profil.jpg" alt="photo de profil" style="width: 350px;">
+                <img src="assets/img/profil.jpeg" alt="photo de profil" style="width: 350px;">
             </div>
         </div>
         <div class="d-flex justify-content-center mx-auto">
@@ -223,12 +229,12 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
     <div id="realisation" class="mb-5">
         <h1 class="text-center mb-5">Nos réalisations</h1>
         <div class="col-10 mx-auto d-flex flex-wrap text-center">
-            <img class="img-size p-1 slide-in" src="assets/img/placo1.jpeg" alt="photo de realisation">
-            <img class="img-size p-1 slide-in" src="assets/img/placo2.jpeg" alt="photo de realisation">
-            <img class="img-size p-1 slide-in" src="assets/img/placo3.jpeg" alt="photo de realisation">
-            <img class="img-size p-1 slide-in" src="assets/img/placo4.jpeg" alt="photo de realisation">
-            <img class="img-size p-1 slide-in" src="assets/img/placo5.jpeg" alt="photo de realisation">
-            <img class="img-size p-1 slide-in" src="assets/img/placo6.jpeg" alt="photo de realisation">
+            <img class="img-size p-1 slide-in" src="assets/img/IMG_3866.JPG" alt="photo de realisation">
+            <img class="img-size p-1 slide-in" src="assets/img/IMG_3868.JPG" alt="photo de realisation">
+            <img class="img-size p-1 slide-in" src="assets/img/IMG_3870.JPG" alt="photo de realisation">
+            <img class="img-size p-1 slide-in" src="assets/img/IMG_3865.JPG" alt="photo de realisation">
+            <img class="img-size p-1 slide-in" src="assets/img/IMG_6605.jpeg" alt="photo de realisation">
+            <img class="img-size p-1 slide-in" src="assets/img/IMG_6607.jpeg" alt="photo de realisation">
         </div>
     </div>
     <hr class="separator col-8 mx-auto" style="height:4px;background:#7f0000;">
