--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
  -->
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -78,6 +77,7 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
     <meta name="keywords"
         content="plaquisterie, plâtrerie, stafferie, Nice, Alpes-Maritimes, rénovation, construction, devis rapide, travail de qualité" />
     <meta name="author" content="DevWebConcept" />
+    <meta http-equiv="Content-Language" content="fr">
     <!-- Bootstrap Icons-->
     <link href="bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
     <!-- Bootstrap -->
@@ -90,7 +90,7 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <img src="assets/img/logo-.png" alt="logo de l'entreprise" style="height: 60px;">
+            <img src="assets/img/logo.png" alt="Logo de l'entreprise LOUCORP" style="height: 60px;">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -117,12 +117,13 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
             </div>
         </div>
     </nav>
-    <!-- Home -->
-    <div id="home" class="d-flex flex-column mb-4 mx-auto justify-content-center">
-        <h1 class="text-center mb-0 fade-in" style="font-size: 100px">LOUCORP</h1>
-        <h3 class="text-center mb-4"> INNOVATION BATIMENT </h3>
-        <h5 class="text-center mt-2 mb-4 fst-italic "> Innovons ensemble !</h5>
-        <div class="container mb-4">
+<!-- Home -->
+<div id="home" class="d-flex flex-column mb-4 mx-auto justify-content-center">
+    <div id="home-text" class="position-relative">
+        <h1 class="text-center mb-2 fade-in" style="font-size: 120px">LOUCORP</h1>
+        <h2 class="text-center fs-3 mb-4"> INNOVATION BATIMENT </h2>
+        <h3 class="text-center mt-2 mb-4 fs-4 fst-italic "> Innovons Ensemble !</h3>
+        <div class="container mt-4 mb-4">
             <div class="row justify-content-center">
                 <div class="text-center">
                     <div class="scrolling-container">
@@ -137,8 +138,10 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
                 </div>
             </div>
         </div>
-        <a class="mt-4 mx-auto btn btn-bordeau text-white shadow-xl" href="#contact">Obtenez votre devis rapidement !</a>
     </div>
+    <a class="mt-4 mx-auto btn btn-bordeau text-white shadow-xl" href="#contact">Obtenez votre devis rapidement !</a>
+</div>
+
     <!-- About -->
     <div id="about" class="text-light-emphasis text-center">
         <div class="d-flex justify-content-center mx-auto">
@@ -162,7 +165,9 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
             <div class="vr"></div>
         </div>
         <div class="d-flex flex-wrap mx-auto justify-content-center align-items-center">
-            
+            <div class="mx-4 p-4">
+                <img src="assets/img/profil.png" alt="photo de profil" style="width: 350px;">
+            </div>
             <div class="col-xl-6 mx-4 lh-lg fw-semibold fs-5">
                 <i class="bi bi-quote fs-1"></i>
                 Expert plaquiste avec 20 ans d'expérience dans le domaine, ma passion pour mon métier se reflète dans chaque projet que je réalise où je m'efforce de créer des espaces intérieurs à la fois fonctionnels et esthétiques. Spécialisé dans l'installation de cloisons, de faux plafonds et d'autres éléments en plaque de plâtre, je suis compétent dans la lecture des plans, la prise de mesures précises et la réalisation de découpes complexes pour garantir un résultat impeccable.
@@ -173,17 +178,17 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
                 <br>
                 Je reste constamment à l'affût des nouvelles tendances et des innovations dans le domaine de la plaquisterie afin de proposer des solutions modernes et de haute qualité à mes clients. Je suis impatient de mettre mes compétences au service de votre projet et de contribuer à la création d'un espace exceptionnel qui répondra à vos besoins et dépassera vos attentes.
                 <i class="bi bi-quote fs-1"></i>
-            </div>
-            <div class="mx-4 p-4">
-                <img src="assets/img/profil.jpeg" alt="photo de profil" style="width: 350px;">
+                <br>
             </div>
         </div>
+        <p class="col-10 mt-2 fw-semibold text-end">Abdellatif EDDAHBI</p>
         <div class="d-flex justify-content-center mx-auto">
             <div class="vr"></div>
         </div>
     </div>
     <!-- Competences -->
     <div id="competence" class="d-flex flex-wrap col-xl-8 col-md-8 mx-auto text-center lh-lg">
+        <h1 class="text-center mx-auto mb-5">Nos compétences</h1>
         <div class="mx-4 mb-5">
             <i class="bi bi-layers fs-1"></i>
             <p class="fs-5 mt-2 mb-4">PLAQUISTE</p>
@@ -228,13 +233,17 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
     <!-- Réalisations -->
     <div id="realisation" class="mb-5">
         <h1 class="text-center mb-5">Nos réalisations</h1>
-        <div class="col-10 mx-auto d-flex flex-wrap text-center">
+        <div class="col-10 mx-auto d-flex flex-wrap justify-content-center">
             <img class="img-size p-1 slide-in" src="assets/img/IMG_3866.JPG" alt="photo de realisation">
             <img class="img-size p-1 slide-in" src="assets/img/IMG_3868.JPG" alt="photo de realisation">
+            <video controls muted loop>
+                <source src="assets/movie/movie.MOV" type="video/mp4" class="slide-in">
+            </video>
             <img class="img-size p-1 slide-in" src="assets/img/IMG_3870.JPG" alt="photo de realisation">
             <img class="img-size p-1 slide-in" src="assets/img/IMG_3865.JPG" alt="photo de realisation">
             <img class="img-size p-1 slide-in" src="assets/img/IMG_6605.jpeg" alt="photo de realisation">
             <img class="img-size p-1 slide-in" src="assets/img/IMG_6607.jpeg" alt="photo de realisation">
+            
         </div>
     </div>
     <hr class="separator col-8 mx-auto" style="height:4px;background:#7f0000;">
